# tcp-echo

./: WORKSPACE
client/: BUILD.bazel  main.go
server/: BUILD.bazel  main.go
